--- a/index.html
+++ b/index.html
@@ -108,6 +108,6 @@
 	<!-- Linking to Firebase -->
 	<script src="https://www.gstatic.com/firebasejs/4.3.1/firebase.js"></script>
 	<!-- Linkking to my JS -->
-	<script src="assets/javascript/app.js"></script>
+	<script src="assets/js/app.js"></script>
 </body>
 </html>
